--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Nagar Niti — Smart Urban Grievance System</title>
-    <meta name="description" content="AI-powered civic complaint platform for citizens and municipal officials. Report issues, track progress, and improve your city." />
-    <meta name="author" content="Nagar Niti" />
 
-    <meta property="og:title" content="Nagar Niti — Smart Urban Grievance System" />
-    <meta property="og:description" content="AI-powered civic complaint platform for smarter city governance." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Nagar Niti — Smart Urban Grievance System</title>
+  <meta name="description"
+    content="AI-powered civic complaint platform for citizens and municipal officials. Report issues, track progress, and improve your city." />
+  <meta name="author" content="Nagar Niti" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Nagar Niti — Smart Urban Grievance System" />
+  <meta property="og:description" content="AI-powered civic complaint platform for smarter city governance." />
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <!-- <meta name="twitter:site" content="@Lovable" /> -->
+  <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
